perf: 优化生成代码
